--- a/src/components/SignInButton/styles.module.scss
+++ b/src/components/SignInButton/styles.module.scss
@@ -1,1 +1,26 @@
 /* The component style is inserted here. */
+.signInButton {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+
+  height: 3rem;
+  border-radius: 3rem;
+  background-color: var(--gray-850);
+  border: 0;
+  padding: 0 1.5rem;
+
+  color: var(--white);
+  font-weight: bold;
+
+  transition: filter 0.2s;
+
+  svg {
+    width: 20px;
+    height: 20px;
+  }
+
+  &:hover {
+    filter: brightness(0.8);
+  }
+}
